--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,8 +4,11 @@
 	padding: 0;
 	font-family: 'Inter', sans-serif;
 }
+/*
+#3eabde my beloved 
+*/
 :root {
-	--primary: #3eabde;
+	--primary: #224CC9;
 	--light: #FEFEFE;
 	--neutral-dark: #2D2D2D;
 	--neutral-light: #E5E7EB;
